Add JQuery Library Version 2.1.4
Add Library

--- a/default.html
+++ b/default.html
@@ -43,6 +43,7 @@
   	</tr>
   </table>
 
+  <script src="assets/js/jquery-2.1.4.min.js"></script>
   <script src="assets/js/code.js"></script>
 </body>
 </html>
